[package]
name = "eznet"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["sync", "time", "macros"] }
futures = "0.3"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
quinn = "0.8"
quinn-proto = "0.8"
rcgen = "0.9"
log = "0.4"
thiserror = "1.0"
bytes = { version = "1.1", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3.3"
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9.0"
