[package]
name = "eznet"
description = "a simple net lib"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "http://docs.rs/eznet"
repository = "https://github.com/Overpeek/eznet"
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
quinn = "0.8"
quinn-proto = "0.8"
rcgen = "0.10"
thiserror = "1.0"
bytes = { version = "1.1", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.16.0"
dashmap = "5.4.0"
tracing = "0.1.37"
tokio = { version = "1.23.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread", "io-std"] }
tracing-subscriber = "0.3.16"
anyhow = "1.0"
